// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodesTableHealthColumn renderer renders with health status 'Healthy' 1`] = `
<div
  className="css-4tf7uh"
>
  <span
    className="text-success"
  >
    Healthy
  </span>
</div>
`;

exports[`NodesTableHealthColumn renderer renders with health status 'NA' 1`] = `
<div
  className="css-4tf7uh"
>
  <span
    className="text-mute"
  >
    N/A
  </span>
</div>
`;

exports[`NodesTableHealthColumn renderer renders with health status 'Unhealthy' 1`] = `
<div
  className="css-4tf7uh"
>
  <span
    className="text-danger"
  >
    Unhealthy
  </span>
</div>
`;

exports[`NodesTableHealthColumn renderer renders with health status 'Warn' 1`] = `
<div
  className="css-4tf7uh"
>
  <span
    className="text-warning"
  >
    Warning
  </span>
</div>
`;
